--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,9 +33,6 @@ android {
             buildConfigField("String", "API_KEY", "\"HBNA19QVVAPP\"")
         }
     }
-    buildFeatures {
-        dataBinding true
-    }
 }
 
 dependencies {
@@ -51,7 +48,7 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:$constraint_version"
 
     // Material Design
-    implementation "com.google.android.material:material:$support_library_version"
+    implementation "com.google.android.material:material:1.2.1"
 
     // RecyclerView
     implementation "androidx.recyclerview:recyclerview:$support_library_version"
