--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
 
         <activity android:name=".ui.dummy.DummyActivity"/>
         <activity android:name=".ui.login.LoginActivity"/>
+        <activity android:name=".ui.signup.SignUpActivity"/>
     </application>
 
 </manifest>
