--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".ui.dummy.DummyActivity"/>
         <activity android:name=".ui.login.LoginActivity"/>
         <activity android:name=".ui.signup.SignUpActivity"/>
+        <activity android:name=".ui.main.MainActivity"/>
     </application>
 
 </manifest>
