--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".ui.login.LoginActivity"/>
         <activity android:name=".ui.signup.SignUpActivity"/>
         <activity android:name=".ui.main.MainActivity"/>
+        <activity android:name=".ui.profile.editProfile.EditProfileActivity"/>
     </application>
 
 </manifest>
