--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,9 @@ dependencies {
     // Parser
     implementation "com.google.code.gson:gson:$gson_version"
 
+    //camera
+    implementation 'com.mindorks:paracamera:0.2.2'
+
     // Debugging
     debugImplementation "com.amitshekhar.android:debug-db:$debug_db_version"
 
